--- a/src/components/CharacterDetail/CharacterDetail.module.css
+++ b/src/components/CharacterDetail/CharacterDetail.module.css
@@ -1,4 +1,3 @@
-@import url("http://fonts.cdnfonts.com/css/harry-potter");
 .container {
   display: flex;
   align-items: center;
@@ -25,5 +24,5 @@
 .title {
   color: #c08229;
   font-size: 60px;
-  font-family: Harry Potter, serif;
+  font-family: serif;
 }
