--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -25,12 +25,10 @@
   height: 100%;
   width: 100%;
   backface-visibility: hidden;
-  background-color: #6c1f13;
   text-align: center;
   background-attachment: fixed;
   transform: rotateY(180deg);
   border-radius: 0.5rem;
-  border: 2px solid #c08229;
 }
 .card:hover {
   transform: rotateY(180deg);
@@ -43,11 +41,11 @@
 }
 .data_title {
   font-size: 1.9rem;
-  color: #c08229;
+ 
   font-family: harryp, serif;
 }
 .data {
-  color: #c08229;
+  
   font-family: harryp, serif;
   list-style: none;
   width: 100%;
@@ -79,4 +77,35 @@
   .data {
     font-size: 0.7rem;
   }
+}
+
+.back_Gryffindor{
+  background-color: #6c1f13;
+  border: 2px solid #c08229;
+  color: #c08229;
+}
+
+.back_Hufflepuff{
+  background-color: #FFDB00;
+  border: 2px solid #60605C;
+  color: #252525;
+}
+
+.back_Slytherin{
+  background-color: #2A623D;
+  border: 2px solid #AAAAAA;
+  color: #AAAAAA;
+}
+
+.back_Ravenclaw{
+  background-color: #222F5B;
+  border: 2px solid #0E1A40;
+  color: whitesmoke;
+}
+
+
+.back_Unknown{
+  background-color: rgb(126, 126, 126, 0.5);
+  border: 2px solid black;
+  color: white;
 }
